--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ install:
   - sudo apt-get -y install cmake
   - sudo apt-get -y install fort77
   - sudo apt-get -y install gfortran
+  # Packaging --
+  - sudo apt-get -y install texlive-latex-base
+  - sudo apt-get -y install texlive-latex-extra
+  - sudo apt-get -y install texlive-science
+  - sudo apt-get -y install texlive-fonts-extra
+  - sudo apt-get -y install texinfo
+  # -- end
   # Install R --
   - export R_VERSION=R-3.1.2
   - wget "http://cran.rstudio.com/src/base/R-3/${R_VERSION}.tar.gz"
