--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,9 @@
 language:
-  - cpp
+  - objective-c
 
 install:
-  - sudo apt-get -y update
-  - sudo apt-get -y install cmake
-  - sudo apt-get -y install fort77
-  - sudo apt-get -y install gfortran
-  # Packaging --
-  - sudo apt-get -y install texinfo
-  - sudo apt-get -y install texlive-fonts-extra
-  - sudo apt-get -y install texlive-fonts-recommended
-  - sudo apt-get -y install texlive-latex-base
-  - sudo apt-get -y install texlive-latex-extra
-  - sudo apt-get -y install texlive-science
-  # -- end
-  # Install R --
-  - export R_VERSION=R-3.1.2
-  - wget "http://cran.rstudio.com/src/base/R-3/${R_VERSION}.tar.gz"
-  - tar xf "${R_VERSION}.tar.gz"
-  - cd "${R_VERSION}"
-  -   ./configure
-  -   make -j6
-  -   sudo make install
-  - cd ..
-  - rm -rf "${R_VERSION}"
-  - which R
-  - R --version
-  # -- end
+  - brew tap homebrew/science
+  - brew install r
 
 script:
   - ./run.sh
